--- a/main.html
+++ b/main.html
@@ -7,9 +7,45 @@
 </head>
 
 <body>
+	<form>
+		<label for="name">Name:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<input type="text" id="name" required></br></br>
+		
+	    <label for="email">Email:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<input id="email" type="text" required></br></br>
+	       
+	    <label>Gender:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<label for="male">Male</label>
+		
+		<input id="male" name="group" type="radio">
+		<label for="female">Female</label>
+		<input id="female" name="group" type="radio">
+			<label for="other">Other</label>
+		    <input id="other" name="group" type="radio"></br></br>
+		
+		<label name="laptop" id="laptop" required>
+	        Laptop Brands:-
+			<select>
+				<option value="Asus">Asus</option>
+				<option value="HP">HP</option>
+				<option value="Apple">Apple</option>
+	        </select>
+            </label></br></br>
+            <label for="Age">Age:-</label required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	        <input id="Age" type="number"></br></br>
+        
+            <label  for="dob">DOB:-</label required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<input id="dob" type="date"></br></br>
+			
+            <label for="password">Password:-</label required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<input id="password" type="password"></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			
+	        <input type="url"> <link rel="stylesheet" href=""></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	        <button type="Submit">Submit</button>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
