--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form>
+	<form method="post">
 		<label for="name">Name:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="text" id="name" required></br></br>
 		
@@ -16,31 +16,32 @@
 	       
 	    <label>Gender:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<label for="male">Male</label>
-		
-		<input id="male" name="group" type="radio">
+		<input id="male" name="group" type="radio" required>
+
 		<label for="female">Female</label>
-		<input id="female" name="group" type="radio">
-			<label for="other">Other</label>
-		    <input id="other" name="group" type="radio"></br></br>
+		<input id="female" name="group" type="radio" required>
+
+		<label for="other">Other</label>
+		<input id="other" name="group" type="radio" required></br></br>
 		
-		<label name="laptop" id="laptop" required>
+		<label name="laptop" id="laptop">
 	        Laptop Brands:-
-			<select>
-				<option value="Asus">Asus</option>
-				<option value="HP">HP</option>
-				<option value="Apple">Apple</option>
+			<select required>
+				<option value="Asus" required>Asus</option>
+				<option value="HP" required>HP</option>
+				<option value="Apple" required>Apple</option>
 	        </select>
             </label></br></br>
-            <label for="Age">Age:-</label required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	        <input id="Age" type="number"></br></br>
+            <label for="age">Age:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	        <input id="age" type="number" required></br></br>
         
-            <label  for="dob">DOB:-</label required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<input id="dob" type="date"></br></br>
+            <label  for="dob">DOB:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<input id="dob" type="date" required></br></br>
 			
-            <label for="password">Password:-</label required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<input id="password" type="password"></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <label for="password">Password:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<input id="password" type="password"  required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			
-	        <input type="url"> <link rel="stylesheet" href=""></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	        <input type="url"> <link rel="stylesheet" href="" required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	        <button type="Submit">Submit</button>
 	</form>
 	<!-- the entire body must be written by student -->
