--- a/main.html
+++ b/main.html
@@ -24,12 +24,12 @@
 		<label for="other">Other</label>
 		<input id="other" name="group" type="radio" required></br></br>
 		
-		<label name="laptop" id="laptop">
+		<label name="laptop" for="laptop">
 	        Laptop Brands:-
 			<select required>
-				<option value="Asus" required>Asus</option>
-				<option value="HP" required>HP</option>
-				<option value="Apple" required>Apple</option>
+				<option id="laptop" value="Asus" required>Asus</option>
+				<option id="laptop" value="HP" required>HP</option>
+				<option id="laptop" value="Apple" required>Apple</option>
 	        </select>
             </label></br></br>
             <label for="age">Age:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
