--- a/main.html
+++ b/main.html
@@ -12,26 +12,26 @@
 		<input type="text" id="name" required></br></br>
 		
 	    <label for="email">Email:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<input id="email" type="text" required></br></br>
+		<input id="email" type="email" required></br></br>
 	       
 	    <label>Gender:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<label for="male">Male</label>
-		<input id="male" name="group" type="radio" required>
+		<input id="male" name="gender" type="radio" required>
 
 		<label for="female">Female</label>
-		<input id="female" name="group" type="radio" required>
+		<input id="female" name="gender" type="radio" required>
 
 		<label for="other">Other</label>
-		<input id="other" name="group" type="radio" required></br></br>
+		<input id="other" name="gender" type="radio" required></br></br>
 		
-		<label name="laptop" for="laptop">
+		<label name="laptop" for="laptop"></label>
 	        Laptop Brands:-
 			<select required>
 				<option id="laptop" value="Asus" required>Asus</option>
 				<option id="laptop" value="HP" required>HP</option>
 				<option id="laptop" value="Apple" required>Apple</option>
 	        </select>
-            </label></br></br>
+            </br></br>
             <label for="age">Age:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	        <input id="age" type="number" required></br></br>
         
@@ -41,8 +41,9 @@
             <label for="password">Password:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<input id="password" type="password"  required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			
-	        <input type="url"> <link rel="stylesheet" href="" required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	        <button type="Submit">Submit</button>
+	        <label for="portfolio"></label>
+			<input id="portfolio" type="url" required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	        <button type="submit">Submit</button>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
