added laptop hp

--- a/main.html
+++ b/main.html
@@ -27,9 +27,9 @@
 		<label name="laptop" for="laptop"></label>
 	        Laptop Brands:-
 			<select required>
-				<option id="laptop" value="Asus" required>Asus</option>
-				<option id="laptop" value="HP" required>HP</option>
-				<option id="laptop" value="Apple" required>Apple</option>
+				<option id="laptop" value="asus" required>Asus</option>
+				<option id="laptop" value="hp" required>HP</option>
+				<option id="laptop" value="apple" required>Apple</option>
 	        </select>
             </br></br>
             <label for="age">Age:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
