--- a/main.html
+++ b/main.html
@@ -24,9 +24,9 @@
 		<label for="other">Other</label>
 		<input id="other" name="gender" type="radio" required></br></br>
 		
-		<label name="laptop" for="laptop"></label>
+		<label for="laptop" name="laptop"></label>
 	        Laptop Brands:-
-			<select required>
+			<select id="laptop" required>
 				<option id="laptop" value="asus" required>Asus</option>
 				<option id="laptop" value="hp" required>HP</option>
 				<option id="laptop" value="apple" required>Apple</option>
