--- a/main.html
+++ b/main.html
@@ -27,9 +27,9 @@
 		<label for="laptop" name="laptop"></label>
 	        Laptop Brands:-
 			<select id="laptop" required>
-				<option id="laptop" value="asus" required>Asus</option>
-				<option id="laptop" value="hp" required>HP</option>
-				<option id="laptop" value="apple" required>Apple</option>
+				<option id="laptop" value="asus">Asus</option>
+				<option id="laptop" value="hp">HP</option>
+				<option id="laptop" value="apple">Apple</option>
 	        </select>
             </br></br>
             <label for="age">Age:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -39,11 +39,11 @@
 				<input id="dob" type="date" required></br></br>
 			
             <label for="password">Password:-</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<input id="password" type="password"  required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<input id="password" type="password"  required></br></br>
 			
-	        <label for="portfolio"></label>
+	        <label for="portfolio">Portfolio</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<input id="portfolio" type="url" required></br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	        <label for="button"><button id="button" type="submit">Submit</button></label>
+	        <button id="button" type="submit">Submit</button>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
