--- a/main.html
+++ b/main.html
@@ -19,19 +19,15 @@
 		<input id="male" name="gender" type="radio" required>
 
 		<label for="female">Female</label>
-		<input id="female" name="gender" type="radio" required>
-
-		<label for="other">Other</label>
-		<input id="other" name="gender" type="radio" required></br></br>
+		<input id="female" name="gender" type="radio" required></br></br>
 		
-		<label for="laptop" name="laptop"></label>
-	        Laptop Brands
+		<label for="laptop" name="laptop">Laptop Brands</label>
 			<select id="laptop" required>
 				<option id="laptop" value="asus">Asus</option>
 				<option id="laptop" value="hp">HP</option>
 				<option id="laptop" value="apple">Apple</option>
-	        </select>
-            </br></br>
+	        </select></br></br>
+			
             <label for="age">Age</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	        <input id="age" type="number" required></br></br>
         
